--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,11 +14,13 @@
 
 $primary: #91d4a9;
 $secondary: #45363a;
-$accent: #41658a; /* Hintergrundfarbe anpassen */
-$dark: #1d1d1d;
+$accent: #e2ffec; /* Hintergrundfarbe anpassen */
+$dark: #6b9a7c;
 $dark-page: #121212;
 
 $positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
+
+$typography-font-family: 'Outfit', sans-serif;
