--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,10 @@
 // app global css in SCSS form
+@font-face {
+  font-family: 'Outfit';
+  src: url('./fonts/Outfit-VariableFont_wght.ttf');
+}
+
+// declare a class which applies it
+.my-font {
+  font-family: 'Outfit';
+}
